--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- navbar code goes here -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid"> <a class="navbar-brand" href="#">Mirko D'Agnese</a>
+  <div class="container-fluid"> <a class="navbar-brand" href="#"><img class="navbar-logo" src="img/logo.svg" alt="Mirko D'Agnese"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
