Prima cella progetti creata (da modificare)

--- a/index.html
+++ b/index.html
@@ -60,6 +60,29 @@
     </div>
   </div>
 </div>
+	
+<!-- projects code goes here -->
+	
+<div class="container-fluid" style="margin-top: 120px">
+	<div class="row">
+		
+			<div class="col-5">
+				<div style="vertical-align: middle">
+					<h6 style="margin-top: 80px">LOREM IPSUM</h6>
+					<h5>Logo Design & Corporate Identity</h5>
+					<hr align="left" size="2" width="20%" style="background-color: #13022C">
+					<p>Lorem ipsum salvit</p>
+				</div>
+			</div>
+			
+			<div class="col-7 fill" style="height: 300px">
+				<img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%">
+			</div>
+			
+	</div>
+</div>
+
+
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-3.4.1.min.js"></script> 
