--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"> <a class="nav-link active" aria-current="page" href="#"><mark>Projects</mark></a></li>
         <li class="nav-item"> <a class="nav-link" href="#"><mark>About</mark></a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#"><mark>Contact</mark></a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" style="padding-right: 0px!important"><mark>Contact</mark></a> </li>
         
       </ul>
     </div>
@@ -63,7 +63,8 @@
 	
 <!-- projects code goes here -->
 	
-<div class="container-fluid" style="margin-top: 120px">
+<div class="project-cell" style="margin-top: 120px">
+	
 	<div class="row">
 		
 			<div class="col-5">
@@ -81,7 +82,6 @@
 			
 	</div>
 </div>
-
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
