--- a/index.html
+++ b/index.html
@@ -16,15 +16,20 @@
 
 <!-- navbar code goes here -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav id="myLogo" class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid"> <a class="navbar-brand" href="#"><img class="navbar-logo" src="img/logo.svg" alt="Mirko D'Agnese"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"> <a class="nav-link active" aria-current="page" href="#"><mark>Projects</mark></a></li>
-        <li class="nav-item"> <a class="nav-link" href="#"><mark>About</mark></a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" style="padding-right: 0px!important"><mark>Contact</mark></a> </li>
-        
+        <li class="nav-item"> <a class="nav-link active" aria-current="page" href="#">
+          <mark>Projects</mark>
+          </a></li>
+        <li class="nav-item"> <a class="nav-link" href="#">
+          <mark>About</mark>
+          </a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" style="padding-right: 0px!important">
+          <mark>Contact</mark>
+          </a> </li>
       </ul>
     </div>
   </div>
@@ -53,36 +58,105 @@
 <div class="container-fluid">
   <div class="row" style="margin-top:30px">
     <div class="col-12">
-      <div class="social-container"> <img class="arrow-image" src="img/socialBehance.svg" alt="arrow"> </div>
-      <div class="social-container"> <img class="arrow-image" src="img/socialDribble.svg" alt="arrow"> </div>
-      <div class="social-container"> <img class="arrow-image" src="img/socialLinkedin.svg" alt="arrow"> </div>
-      <div class="social-container"> <img class="arrow-image" src="img/socialInstagram.svg" alt="arrow"> </div>
+      <div class="social-container"> <a class="behance-image" href=""></a></div>
+      <div class="social-container"> <a class="dribble-image" href=""></a></div>
+      <div class="social-container"> <a class="linkedin-image" href=""></a></div>
+      <div class="social-container"> <a class="instagram-image" href=""></a></div>
     </div>
   </div>
 </div>
-	
+
 <!-- projects code goes here -->
-	
+
 <div class="project-cell" style="margin-top: 120px">
-	
-	<div class="row">
-		
-			<div class="col-5">
-				<div style="vertical-align: middle">
-					<h6 style="margin-top: 80px">LOREM IPSUM</h6>
-					<h5>Logo Design & Corporate Identity</h5>
-					<hr align="left" size="2" width="20%" style="background-color: #13022C">
-					<p>Lorem ipsum salvit</p>
-				</div>
-			</div>
-			
-			<div class="col-7 fill" style="height: 300px">
-				<img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%">
-			</div>
-			
-	</div>
+  <div class="row">
+    <div class="col-5">
+      <div style="vertical-align: middle">
+        <h6 style="margin-top: 80px">LOREM IPSUM</h6>
+        <h5>Logo Design & Corporate Identity</h5>
+        <hr align="left" size="2" width="20%" style="background-color: #13022C">
+        <p>Lorem ipsum salvit</p>
+      </div>
+    </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+  </div>
+</div>
+<div class="project-cell" style="margin-top: 40px">
+  <div class="row">
+    <div class="col-5">
+      <div style="vertical-align: middle">
+        <h6 style="margin-top: 80px">LOREM IPSUM</h6>
+        <h5>Logo Design & Corporate Identity</h5>
+        <hr align="left" size="2" width="20%" style="background-color: #13022C">
+        <p>Lorem ipsum salvit</p>
+      </div>
+    </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+  </div>
+</div>
+<div class="project-cell" style="margin-top: 40px">
+  <div class="row">
+    <div class="col-5">
+      <div style="vertical-align: middle">
+        <h6 style="margin-top: 80px">LOREM IPSUM</h6>
+        <h5>Logo Design & Corporate Identity</h5>
+        <hr align="left" size="2" width="20%" style="background-color: #13022C">
+        <p>Lorem ipsum salvit</p>
+      </div>
+    </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+  </div>
+</div>
+<div class="project-cell" style="margin-top: 40px">
+  <div class="row">
+    <div class="col-5">
+      <div style="vertical-align: middle">
+        <h6 style="margin-top: 80px">LOREM IPSUM</h6>
+        <h5>Logo Design & Corporate Identity</h5>
+        <hr align="left" size="2" width="20%" style="background-color: #13022C">
+        <p>Lorem ipsum salvit</p>
+      </div>
+    </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+  </div>
+</div>
+<div class="project-cell" style="margin-top: 40px">
+  <div class="row">
+    <div class="col-5">
+      <div style="vertical-align: middle">
+        <h6 style="margin-top: 80px">LOREM IPSUM</h6>
+        <h5>Logo Design & Corporate Identity</h5>
+        <hr align="left" size="2" width="20%" style="background-color: #13022C">
+        <p>Lorem ipsum salvit</p>
+      </div>
+    </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+  </div>
+</div>
+<div class="project-cell" style="margin-top: 40px; margin-bottom: 50px">
+  <div class="row">
+    <div class="col-5">
+      <div style="vertical-align: middle">
+        <h6 style="margin-top: 80px">LOREM IPSUM</h6>
+        <h5>Logo Design & Corporate Identity</h5>
+        <hr align="left" size="2" width="20%" style="background-color: #13022C">
+        <p>Lorem ipsum salvit</p>
+      </div>
+    </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+  </div>
 </div>
 
+<!-- ancorpoint code goes here -->
+
+<div class="project-cell"> <a href="#myLogo">
+  <div class="row" style="margin-top:30px">
+    <div class="col-12">
+      <p style="float: left">Back to top</p>
+      <div class="arrow-container"> <img class="arrow-image" src="img/arrowRight.svg" alt="arrow" style="transform: rotate(270deg)"> </div>
+    </div>
+  </div>
+  </a> </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-3.4.1.min.js"></script> 
