--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>Lorem ipsum salvit</p>
       </div>
     </div>
-    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/placeholder.png" alt="" style="object-position:0 20%"> </div>
   </div>
 </div>
 <div class="project-cell" style="margin-top: 40px">
@@ -91,7 +91,7 @@
         <p>Lorem ipsum salvit</p>
       </div>
     </div>
-    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/placeholder.png" alt="" style="object-position:0 20%"> </div>
   </div>
 </div>
 <div class="project-cell" style="margin-top: 40px">
@@ -104,7 +104,7 @@
         <p>Lorem ipsum salvit</p>
       </div>
     </div>
-    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/placeholder.png" alt="" style="object-position:0 20%"> </div>
   </div>
 </div>
 <div class="project-cell" style="margin-top: 40px">
@@ -117,7 +117,7 @@
         <p>Lorem ipsum salvit</p>
       </div>
     </div>
-    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/placeholder.png" alt="" style="object-position:0 20%"> </div>
   </div>
 </div>
 <div class="project-cell" style="margin-top: 40px">
@@ -130,7 +130,7 @@
         <p>Lorem ipsum salvit</p>
       </div>
     </div>
-    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/placeholder.png" alt="" style="object-position:0 20%"> </div>
   </div>
 </div>
 <div class="project-cell" style="margin-top: 40px; margin-bottom: 50px">
@@ -143,7 +143,7 @@
         <p>Lorem ipsum salvit</p>
       </div>
     </div>
-    <div class="col-7 fill" style="height: 300px"> <img src="img/mirveresort-homepage.png" alt="" style="object-position:0 20%"> </div>
+    <div class="col-7 fill" style="height: 300px"> <img src="img/placeholder.png" alt="" style="object-position:0 20%"> </div>
   </div>
 </div>
 
