--- a/index.html
+++ b/index.html
@@ -16,24 +16,31 @@
 
 <!-- navbar code goes here -->
 
-<nav id="myLogo" class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid"> <a class="navbar-brand" href="#"><img class="navbar-logo" src="img/logo.svg" alt="Mirko D'Agnese"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"> <a class="nav-link active" aria-current="page" href="#">
+
+	
+  <nav id="myLogo" class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid"><a class="navbar-brand" href="#"><img class="navbar-logo" src="img/logo.svg" alt="Mirko D'Agnese"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav">
+      <li class="nav-item"> <a class="nav-link" aria-current="page" href="index.html" style="float: right">
           <mark>Projects</mark>
           </a></li>
-        <li class="nav-item"> <a class="nav-link" href="#">
+        <li class="nav-item"> <a class="nav-link" href="about.html" style="float: right">
           <mark>About</mark>
           </a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" style="padding-right: 0px!important">
+        <li class="nav-item"> <a class="nav-link" href="contact.html" style="padding-right: 0px!important; float: right">
           <mark>Contact</mark>
           </a> </li>
-      </ul>
+     </ul>
     </div>
-  </div>
+	  </div>
 </nav>
+
+
 
 <!-- presentation code goes here -->
 
@@ -150,11 +157,11 @@
 <!-- ancorpoint code goes here -->
 
 <div class="project-cell"> <a href="#myLogo">
-  <div class="row" style="margin-top:30px">
-    <div class="col-12">
-      <p style="float: left">Back to top</p>
+  <div style="margin-top:30px; display: flex; justify-content: center; align-items: baseline">
+    
+      <p>Back to top</p>
       <div class="arrow-container"> <img class="arrow-image" src="img/arrowRight.svg" alt="arrow" style="transform: rotate(270deg)"> </div>
-    </div>
+    
   </div>
   </a> </div>
 
