Aggiustato il form rendendolo uguale per tutti i campi.

--- a/contact.html
+++ b/contact.html
@@ -45,14 +45,14 @@
 <form action="">
   <div>Name *</div>
   <div>
-    <input type="text" placeholder="Your Name..." required>
+    <input class="my-form" type="text" placeholder="Your Name..." required minlenght="3" maxlength="12">
   </div>
   <div class="space-top" style="margin-top: 10px">Email Address *</div>
   <div>
-    <input type="email" placeholder="Your Email Address...">
+    <input class="my-form" type="email" placeholder="Your Email Address..." required>
   </div>
   <div class="space-top" style="margin-top: 10px">Message *</div>
-  <textarea name="" id="" cols="30" rows="10" placeholder="Your Message..."></textarea>
+  <textarea class="my-form" name="" id="" cols="30" rows="10" placeholder="Your Message..." required minlenght="10"></textarea>
   <div>
     <input type="submit" class="space-top" style="margin-top: 10px" value="SUBMIT">
   </div>
