si nun funzion t'abbotto luocchi

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Mirko D'Agnese</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="image" property="og:image" content="assets/thumbnail.png">
   <link rel="icon" type="image/x-icon" href="assets/logo.svg">
 </head>
 <body>
